2016-07-10  Tadashi MATSUO  <tad@mymail.twin.jp>

	* update-cert.sh: Update the URL of the CA certificates.

	* twittering-mode.el: Update the embedded CA certificates with the
	latest https://curl.haxx.se/ca/cacert.pem .
	(twittering-ca-cert-list): update the CA certificates.
	* update-cert.sh: Remove 'equifax', which is no longer included in
	the CA certificates.

2016-07-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Import the patches by nabeo. The regular
	expressions of HTTP/2 responses are updated so that it works well
	with the latest version of curl.
	(twittering-make-header-info-alist): update the regexp.
	(twittering-pre-process-buffer-curl): likewise.
	(twittering-oauth-get-response-alist): likewise.

	* twittering-mode.el: Fix regular expressions including a literal
	period ".".
	(twittering-make-header-info-alist): fix a regexp.
	(twittering-pre-process-buffer-curl): likewise.
	(twittering-oauth-get-response-alist): likewise.

	* twittering-mode.el: Accept HTTP responses generated by old
	versions of curl. The regular expressions of HTTP responses are
	updated so that they match headers starting with "HTTP/2.0".
	(twittering-make-header-info-alist): update the regexp.
	(twittering-pre-process-buffer-curl): likewise.
	(twittering-oauth-get-response-alist): likewise.

2016-06-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: You can retweet your own tweets.
	(twittering-native-retweet): retweet the given tweet without
	regard to its author.

2016-03-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Render an ampersand as it is posted. An
	ampersand "&" in a posted tweet is encoded to "&amp;" in the
	corresponding JSON object. The current version of twittering-mode
	decodes it to "&" on rendering the tweet.
	(twittering-make-gap-list): support a gap generated by an
	ampersand in a text.
	(twittering-decode-html-entities): decode a character entity
	reference for the ampersand "&".